Fix spacing in agent viz

--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ h2 {
   margin-top: 5vh;
 }
 
+.margin-top-low{
+  margin-top: 2vh;
+}
+
 .margin-bottom {
   margin-bottom: 10vh;
 }
